--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lullaby Reborn - Privacy Policy</title>
+    <title>Reborn Lullaby - Privacy Policy</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
     <style>
         * {
@@ -237,7 +237,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎵 Lullaby Reborn</h1>
+            <h1>🎵 Reborn Lullaby</h1>
             <p>Privacy Policy</p>
         </div>
         
@@ -256,7 +256,7 @@
 
     <script>
         // Conteúdo Markdown
-        const markdownContent = `# 🎵 Lullaby Reborn - Privacy Policy
+        const markdownContent = `# 🎵 Reborn Lullaby - Privacy Policy
 
 **Effective Date:** July 17, 2025  
 **Developer:** Talyz Apps  
@@ -266,7 +266,7 @@
 
 ## 📱 About This Service
 
-Lullaby Reborn is built by **Talyz Apps** as a **free app**. This SERVICE is provided by Talyz Apps at no cost and is intended for use as is.
+Reborn Lullaby is built by **Talyz Apps** as a **free app**. This SERVICE is provided by Talyz Apps at no cost and is intended for use as is.
 
 This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decides to use our Service.
 
@@ -282,7 +282,7 @@ This page is used to inform visitors regarding our policies with the collection,
 
 ## 📊 Information Collection and Use
 
-**Lullaby Reborn itself does not collect or store any personal information from its users.**
+**Reborn Lullaby itself does not collect or store any personal information from its users.**
 
 The app uses an internet connection to:
 - Stream music content
